--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,11 +36,24 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
+  +persist_docs:
+      relation: true
+      columns: true
   my_first_dbt_project:
     staging:
       google_analytics:
-        schema: google_analytics
+        schema: stg_google_analytics
       sales_database:
-        schema: sales_database
+        schema: stg_sales_database
       google_sheets:
-        schema: google_sheets
+        schema: stg_google_sheets
+
+    intermediate:
+      sales_database: 
+        schema: int_sales_database
+      google_analytics:
+        schema: int_google_analytics
+
+    mart:
+      schema: mart
+
