--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -39,19 +39,25 @@ models:
   +persist_docs:
       relation: true
       columns: true
+      
   my_first_dbt_project:
+
     staging:
+      materialized: view
       google_analytics:
         schema: stg_google_analytics
       sales_database:
         schema: stg_sales_database
       google_sheets:
         schema: stg_google_sheets
+
     intermediate:
+      materialized: view
       sales_database: 
         schema: int_sales_database
       google_analytics:
         schema: int_google_analytics
     mart:
       schema: mart
+      materialized: table
 
